Add auth0 support

--- a/projekt1-backend/src/main/resources/application.properties
+++ b/projekt1-backend/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.profiles.active=develop
 spring.data.jdbc.repositories.enabled=false
 server.error.include-binding-errors=always
+auth0.audience=https://dev-r4r2t64ocsg3g08e.us.auth0.com/api/v2/
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-r4r2t64ocsg3g08e.us.auth0.com/
+server.ssl.key-store: src/main/resources/springboot.jks
+server.ssl.key-store-password: JesusIsKing123!
+server.ssl.key-store-type: pkcs12
+server.ssl.key-alias: springboot
+server.ssl.key-password: JesusIsKing123!
+server.port: 8443
