Add production databse connection and dockerfile

--- a/projekt1-backend/src/main/resources/application-production.properties
+++ b/projekt1-backend/src/main/resources/application-production.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= to_be_configured
-spring.datasource.username= to_be_configured
-spring.datasource.password= to_be_configured
+spring.datasource.url= jdbc:postgresql://dpg-cdd8s5un6mpm6j5vr320-a.frankfurt-postgres.render.com/web2_projekt1
+spring.datasource.username= tunjicm
+spring.datasource.password= r5EWuC1IGSh54VFlnYNzm5AEcocp69Fb
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
