--- a/projekt1-backend/dockerfile
+++ b/projekt1-backend/dockerfile
@@ -1,4 +1,9 @@
+FROM maven:3.8.6-eclipse-temurin-17-alpine AS build
+COPY src /tmp/src
+COPY pom.xml /tmp/pom.xml
+WORKDIR /tmp
+RUN mvn clean package
+
 FROM eclipse-temurin:17-jdk-alpine
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+COPY --from=build /tmp/target/*.jar /app/web2-projekt1.jar
+ENTRYPOINT ["java","-jar","/app/web2-projekt1.jar"]
