--- a/projekt1-backend/dockerfile
+++ b/projekt1-backend/dockerfile
@@ -6,4 +6,5 @@ RUN mvn clean package
 
 FROM eclipse-temurin:17-jdk-alpine
 COPY --from=build /tmp/target/*.jar /app/web2-projekt1.jar
+EXPOSE 80
 ENTRYPOINT ["java","-jar","/app/web2-projekt1.jar"]
