--- a/projekt1-frontend/package.json
+++ b/projekt1-frontend/package.json
@@ -28,7 +28,8 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "codegen": "curl -k  https://localhost:8443/v3/api-docs > ./api.json && java -jar modules/openapi-generator-cli.jar generate -i ./api.json -g typescript-fetch -o src/api"
+        "codegen-dev": "curl -k  https://localhost:8443/v3/api-docs > ./api.json && java -jar modules/openapi-generator-cli.jar generate -i ./api.json -g typescript-fetch -o src/api",
+        "codegen-prod": "curl -k  https://web2-projekt1-4g0f.onrender.com/v3/api-docs > ./api.json && java -jar modules/openapi-generator-cli.jar generate -i ./api.json -g typescript-fetch -o src/api"
     },
     "eslintConfig": {
         "extends": [
